--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -25,16 +25,16 @@
                 class="absolute bottom-32 left-1/2 -translate-x-1/2 w-96 h-32 bg-blue-100 opacity-40 rounded-full blur-2xl">
             </div>
         </div>
-        <form class="bg-white rounded-lg shadow-lg p-8 w-full max-w-md flex flex-col gap-6">
+        <form [formGroup]="formLogin" (ngSubmit)="onSubmit()" class="bg-white rounded-lg shadow-lg p-8 w-full max-w-md flex flex-col gap-6">
             <h2 class="text-2xl font-bold text-blue-700 mb-2 text-center">Sign In</h2>
             <div>
                 <label class="block text-gray-700 mb-1" for="email">Email</label>
-                <input id="email" name="email" type="email" required
+                <input formControlName="email" id="email" name="email" type="email" required
                     class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
             </div>
             <div>
                 <label class="block text-gray-700 mb-1" for="password">Password</label>
-                <input id="password" name="password" type="password" required
+                <input formControlName="password" id="password" name="password" type="password" required
                     class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
             </div>
             <button type="submit"
