feat: begining the implementarion of user registration and add the user services files

--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -46,6 +46,7 @@
                 class="w-full py-2 rounded bg-blue-500 text-white font-semibold hover:bg-blue-600 transition">
                 Register
             </button>
+            <div *ngIf="errorMessage" class="text-red-500 mb-2">{{ errorMessage }}</div>
             <p class="text-center text-gray-500 text-sm mt-2">
                 Already have an account?
                 <a (click)="navigateToLogin()" class="text-blue-500 hover:underline">Sign In</a>
