implement Product; update User model and integrate product listing service. Token and auth are working.

--- a/src/app/pages/list-product/list-product.html
+++ b/src/app/pages/list-product/list-product.html
@@ -10,7 +10,7 @@
                 <button type="button"
                     class="inline-flex items-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:outline-none"
                     (click)="showDropdown = !showDropdown" (blur)="showDropdown = false">
-                    {{ username || 'Usuário' }}
+                    {{ user?.username }}
                     <svg class="-mr-1 size-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                         <path fill-rule="evenodd"
                             d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
@@ -70,7 +70,7 @@
                         <tr *ngFor="let product of paginatedProducts">
                             <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ product.name }}</td>
                             <td class="px-6 py-4 whitespace-nowrap text-right">
-                                <a (click)="goToDetails(product.id)">
+                                <a (click)="goToDetails(product.id_product!)">
                                     <button class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition">
                                         Details
                                     </button>
