--- a/src/app/pages/list-product/list-product.html
+++ b/src/app/pages/list-product/list-product.html
@@ -25,7 +25,7 @@
                             tabindex="-1">Profile</a>
                         <a *ngIf="isAdmin" href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" 
                             tabindex="-1">Manage Users</a>
-                        <button type="button" (click)="logout()"
+                        <button type="button"
                             class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100"
                             role="menuitem" tabindex="-1">Logout</button>
                     </div>
@@ -59,7 +59,7 @@
             </div>
 
             <div class="overflow-x-auto">
-                <table class="min-w-full divide-y divide-gray-200">
+                <table *ngIf="products" class="min-w-full divide-y divide-gray-200">
                     <thead class="bg-gray-50">
                         <tr>
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Product Name</th>
@@ -68,7 +68,7 @@
                     </thead>
                     <tbody class="bg-white divide-y divide-gray-200">
                         <tr *ngFor="let product of paginatedProducts">
-                            <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ product.name }}</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ product?.name }}</td>
                             <td class="px-6 py-4 whitespace-nowrap text-right">
                                 <a (click)="goToDetails(product.id_product!)">
                                     <button class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition">
