--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -1,4 +1,10 @@
 <div class="min-h-screen flex flex-col">
+    <nav class="w-full flex items-center justify-between px-8 py-4 bg-white shadow">
+        <div (click)="navigateToHome()" class="flex items-center gap-2 cursor-pointer">
+            <span class="text-2xl font-bold text-blue-600">Product</span>
+            <img src="https://go.dev/blog/go-brand/Go-Logo/SVG/Go-Logo_Blue.svg" alt="Go Logo" class="w-14 h-14 -m-3" />
+        </div>
+    </nav>
 
     <div class="flex-1 flex flex-col items-center justify-center relative overflow-hidden">
         <div class="absolute inset-0 -z-10">
@@ -9,7 +15,8 @@
                 class="absolute bottom-32 left-1/2 -translate-x-1/2 w-96 h-32 bg-blue-100 opacity-40 rounded-full blur-2xl">
             </div>
         </div>
-        <form [formGroup]="formLogin" (ngSubmit)="onSubmit()" class="bg-white rounded-lg shadow-lg p-8 w-full max-w-md flex flex-col gap-6">
+        <form [formGroup]="formLogin" (ngSubmit)="onSubmit()"
+            class="bg-white rounded-lg shadow-lg p-8 w-full max-w-md flex flex-col gap-6">
             <h2 class="text-2xl font-bold text-blue-700 mb-2 text-center">Sign In</h2>
             <div>
                 <label class="block text-gray-700 mb-1" for="email">Email</label>
