--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -1,5 +1,5 @@
 <nav class="w-full flex items-center justify-between px-8 py-4 bg-white shadow">
-    <div class="flex items-center gap-2">
+    <div (click)="navigateToHome()" class="flex items-center gap-2 cursor-pointer">
         <span class="text-2xl font-bold text-blue-600">Product</span>
         <img src="https://go.dev/blog/go-brand/Go-Logo/SVG/Go-Logo_Blue.svg" alt="Go Logo" class="w-14 h-14 -m-3" />
     </div>
@@ -24,8 +24,8 @@
                     <a *ngIf="isAdmin" href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem"
                         tabindex="-1">Manage Users</a>
                     <button (click)="logout()"
-                        class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 cursor-pointer" role="menuitem"
-                        tabindex="-1">Logout</button>
+                        class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 cursor-pointer"
+                        role="menuitem" tabindex="-1">Logout</button>
                 </div>
             </div>
         </div>
