--- a/src/app/pages/detail-product/detail-product.html
+++ b/src/app/pages/detail-product/detail-product.html
@@ -11,11 +11,11 @@
             <h2 class="text-2xl font-bold text-blue-700 mb-2 text-center">Product Details</h2>
             <div>
                 <label class="block text-gray-700 mb-1">Product Name</label>
-                <p class="text-lg text-gray-900 font-semibold">{{ product.name }}</p>
+                <p class="text-lg text-gray-900 font-semibold">{{ product?.name }}</p>
             </div>
             <div>
                 <label class="block text-gray-700 mb-1">Price</label>
-                <p class="text-blue-600 font-bold text-lg">R$ {{ product.price | number:'1.2-2' }}</p>
+                <p class="text-blue-600 font-bold text-lg">R$ {{ product?.price | number:'1.2-2' }}</p>
             </div>
             <div class="flex gap-2 mt-4">
                 <button class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition" (click)="goBack()">
