--- a/src/app/pages/profile-user/profile-user.html
+++ b/src/app/pages/profile-user/profile-user.html
@@ -28,11 +28,15 @@
                 <h2 class="text-2xl font-bold text-blue-700 mb-4 text-center">User Information</h2>
                 <div class="mb-4">
                     <span class="block text-gray-700 font-semibold">Username:</span>
-                    <span class="block text-gray-900">{{ profileForm.value.username }}</span>
+                    <span class="block text-gray-900">{{ user?.username }}</span>
                 </div>
                 <div class="mb-4">
                     <span class="block text-gray-700 font-semibold">Email:</span>
-                    <span class="block text-gray-900">{{ profileForm.value.email }}</span>
+                    <span class="block text-gray-900">{{ user?.email }}</span>
+                </div>
+                <div class="mb-4">
+                    <span class="block text-gray-700 font-semibold">Role:</span>
+                    <span class="block text-gray-900">{{ user?.role }}</span>
                 </div>
             </div>
             <form *ngIf="activeTab === 'edit'" [formGroup]="profileForm" (ngSubmit)="onSubmit()"
