--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -20,9 +20,9 @@
                 class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black/5 focus:outline-none"
                 role="menu" aria-orientation="vertical" tabindex="-1">
                 <div class="py-1" role="none">
-                    <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1">Profile</a>
-                    <a *ngIf="isAdmin" href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem"
-                        tabindex="-1">Manage Users</a>
+                    <button (click)="navigateToProfile()" class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 cursor-pointer" role="menuitem" tabindex="-1">Profile</button>
+                    <button (click)="navigateToManageUsers()" *ngIf="isAdmin" class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 cursor-pointer" role="menuitem"
+                        tabindex="-1">Manage Users</button>
                     <button (click)="logout()"
                         class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 cursor-pointer"
                         role="menuitem" tabindex="-1">Logout</button>
