implement user management features; add user deletion and detail navigation, and integrate user listing service

--- a/src/app/pages/manage-users/manage-users.html
+++ b/src/app/pages/manage-users/manage-users.html
@@ -33,9 +33,16 @@
                             <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ user.name }}</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ user.email }}</td>
                             <td class="px-6 py-4 whitespace-nowrap text-right">
-                                <a><!--routerLink-->
-                                    <button class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition">
+                                <a>
+                                    <button (click)="gotoDetails(user.id)" class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition">
                                         Details
+                                    </button>
+                                </a>
+                            </td>
+                            <td class="px-6 py-4 whitespace-nowrap text-right">
+                                <a>
+                                    <button (click)="deleteUser(user.id)" class="px-4 py-2 rounded bg-red-500 text-white hover:bg-red-600 transition">
+                                        Delete
                                     </button>
                                 </a>
                             </td>
