--- a/src/app/pages/manage-users/manage-users.html
+++ b/src/app/pages/manage-users/manage-users.html
@@ -30,18 +30,18 @@
                     </thead>
                     <tbody class="bg-white divide-y divide-gray-200">
                         <tr *ngFor="let user of paginatedUsers">
-                            <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ user.name }}</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ user.username }}</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ user.email }}</td>
                             <td class="px-6 py-4 whitespace-nowrap text-right">
                                 <a>
-                                    <button (click)="gotoDetails(user.id)" class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition">
+                                    <button (click)="gotoDetails(user.id_user!)" class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition">
                                         Details
                                     </button>
                                 </a>
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap text-right">
                                 <a>
-                                    <button (click)="deleteUser(user.id)" class="px-4 py-2 rounded bg-red-500 text-white hover:bg-red-600 transition">
+                                    <button (click)="deleteUser(user.id_user!)" class="px-4 py-2 rounded bg-red-500 text-white hover:bg-red-600 transition">
                                         Delete
                                     </button>
                                 </a>
