--- a/src/app/pages/detail-user/detail-user.html
+++ b/src/app/pages/detail-user/detail-user.html
@@ -66,7 +66,7 @@
                         Invalid Email.
                     </div>
                 </div>
-                <div>
+                <div *ngIf="isAdmin">
                     <label class="block text-gray-700 mb-1" for="role">Role</label>
                     <select name="role" id="role" formControlName="role"
                         class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400">
