--- a/src/app/pages/manage-users/manage-users.html
+++ b/src/app/pages/manage-users/manage-users.html
@@ -29,20 +29,29 @@
                         </tr>
                     </thead>
                     <tbody class="bg-white divide-y divide-gray-200">
-                        <tr *ngFor="let user of paginatedUsers">
-                            <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ user.username }}</td>
-                            <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ user.email }}</td>
-                            <td class="px-6 py-4 whitespace-nowrap text-right">
-                                <a>
-                                    <button (click)="gotoDetails(user.id_user!)" class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition">
-                                        Details
-                                    </button>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr *ngIf="paginatedUsers.length === 0">
-                            <td colspan="3" class="px-6 py-4 text-center text-gray-400">User not found.</td>
-                        </tr>
+                        @if(usersLoaded){
+                            @if(hasUsers){
+                                @for (user of paginatedUsers; track user.id_user) {
+                                    <tr>
+                                        <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ user.username }}</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ user.email }}</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-right">
+                                            <button (click)="gotoDetails(user.id_user!)" class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition">
+                                                Details
+                                            </button>
+                                        </td>
+                                    </tr>
+                                }
+                            } @else {
+                                <tr>
+                                    <td colspan="3" class="px-6 py-4 text-center text-gray-400">User not found.</td>
+                                </tr>
+                            }
+                        } @else {
+                            <tr>
+                                <td colspan="3" class="px-6 py-4 text-center text-gray-400">Loading users...</td>
+                            </tr>
+                        }
                     </tbody>
                 </table>
             </div>
@@ -52,7 +61,9 @@
                     <label for="perPage" class="mr-2 text-gray-700">Results per page:</label>
                     <select id="perPage" [(ngModel)]="perPage" (change)="onPerPageChange()"
                         class="border border-gray-300 rounded px-2 py-1 focus:outline-none focus:ring-2 focus:ring-blue-400">
-                        <option *ngFor="let size of [5, 10, 15, 20]" [value]="size">{{ size }}</option>
+                        @for (size of [5, 10, 15, 20]; track size) {
+                            <option [value]="size">{{ size }}</option>
+                        }
                     </select>
                 </div>
                 <div class="flex gap-2 items-center">
