--- a/src/app/pages/profile-user/profile-user.html
+++ b/src/app/pages/profile-user/profile-user.html
@@ -23,56 +23,62 @@
                     Update Information
                 </button>
             </div>
-
-            <div *ngIf="activeTab === 'info'">
-                <h2 class="text-2xl font-bold text-blue-700 mb-4 text-center">User Information</h2>
-                <div class="mb-4">
-                    <span class="block text-gray-700 font-semibold">Username:</span>
-                    <span class="block text-gray-900">{{ user?.username }}</span>
-                </div>
-                <div class="mb-4">
-                    <span class="block text-gray-700 font-semibold">Email:</span>
-                    <span class="block text-gray-900">{{ user?.email }}</span>
-                </div>
-                <div class="mb-4">
-                    <span class="block text-gray-700 font-semibold">Role:</span>
-                    <span class="block text-gray-900">{{ user?.role }}</span>
-                </div>
-            </div>
-            <form *ngIf="activeTab === 'edit'" [formGroup]="profileForm" (ngSubmit)="onSubmit()"
-                class="flex flex-col gap-6">
-                <h2 class="text-2xl font-bold text-blue-700 mb-2 text-center">Update profile</h2>
+            @if (activeTab === 'info') {
                 <div>
-                    <label class="block text-gray-700 mb-1" for="username">Username</label>
-                    <input id="username" formControlName="username" type="text" required
-                        class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
-                    <div *ngIf="isSubmitted && profileForm.controls['username'].invalid"
-                        class="text-red-500 text-xs mt-1">
-                        Username is required.
+                    <h2 class="text-2xl font-bold text-blue-700 mb-4 text-center">User Information</h2>
+                    <div class="mb-4">
+                        <span class="block text-gray-700 font-semibold">Username:</span>
+                        <span class="block text-gray-900">{{ user?.username }}</span>
+                    </div>
+                    <div class="mb-4">
+                        <span class="block text-gray-700 font-semibold">Email:</span>
+                        <span class="block text-gray-900">{{ user?.email }}</span>
+                    </div>
+                    <div class="mb-4">
+                        <span class="block text-gray-700 font-semibold">Role:</span>
+                        <span class="block text-gray-900">{{ user?.role }}</span>
                     </div>
                 </div>
-                <div>
-                    <label class="block text-gray-700 mb-1" for="email">Email</label>
-                    <input id="email" formControlName="email" type="email" required
-                        class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
-                    <div *ngIf="isSubmitted && profileForm.controls['email'].invalid" class="text-red-500 text-xs mt-1">
-                        Invalid Email.
+            } @else {
+                <form [formGroup]="profileForm" (ngSubmit)="onSubmit()"
+                    class="flex flex-col gap-6">
+                    <h2 class="text-2xl font-bold text-blue-700 mb-2 text-center">Update profile</h2>
+                    <div>
+                        <label class="block text-gray-700 mb-1" for="username">Username</label>
+                        <input id="username" formControlName="username" type="text" required
+                            class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
+                        @if (isSubmitted && profileForm.controls['username'].invalid) {
+                            <div class="text-red-500 text-xs mt-1">
+                                Username is required.
+                            </div>
+                        }
                     </div>
-                </div>
-                <div>
-                    <label class="block text-gray-700 mb-1" for="password">New Password</label>
-                    <input id="password" formControlName="password" type="password"
-                        class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
-                    <div *ngIf="isSubmitted && profileForm.controls['password'].invalid"
-                        class="text-red-500 text-xs mt-1">
-                        Password needs at least 6 characteres.
+                    <div>
+                        <label class="block text-gray-700 mb-1" for="email">Email</label>
+                        <input id="email" formControlName="email" type="email" required
+                            class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
+                        @if (isSubmitted && profileForm.controls['email'].invalid) {
+                            <div class="text-red-500 text-xs mt-1">
+                                Invalid Email.
+                            </div>
+                        }
                     </div>
-                </div>
-                <button type="submit"
-                    class="w-full py-2 rounded bg-blue-500 text-white font-semibold hover:bg-blue-600 transition">
-                    Update
-                </button>
-            </form>
+                    <div>
+                        <label class="block text-gray-700 mb-1" for="password">New Password</label>
+                        <input id="password" formControlName="password" type="password"
+                            class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
+                        @if (isSubmitted && profileForm.controls['password'].invalid){
+                            <div class="text-red-500 text-xs mt-1">
+                                Password needs at least 6 characteres.
+                            </div>
+                        }
+                    </div>
+                    <button type="submit"
+                        class="w-full py-2 rounded bg-blue-500 text-white font-semibold hover:bg-blue-600 transition">
+                        Update
+                    </button>
+                </form>
+            }
         </div>
     </div>
 
