--- a/src/app/pages/update-product/update-product.html
+++ b/src/app/pages/update-product/update-product.html
@@ -16,17 +16,21 @@
                 <label class="block text-gray-700 mb-1" for="name">Product Name</label>
                 <input id="name" formControlName="name" type="text" required
                     class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
-                <div *ngIf="isSubmitted && productForm.controls['name'].invalid" class="text-red-500 text-xs mt-1">
-                    Name is required.
-                </div>
+                @if (isSubmitted && productForm.controls['name'].invalid) {
+                    <div class="text-red-500 text-xs mt-1">
+                        Name is required.
+                    </div>
+                }
             </div>
             <div>
                 <label class="block text-gray-700 mb-1" for="price">Price</label>
                 <input id="price" formControlName="price" type="number" min="0" step="0.01" required
                     class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
-                <div *ngIf="isSubmitted && productForm.controls['price'].invalid" class="text-red-500 text-xs mt-1">
-                    Price is required, and might be a positive number.
-                </div>
+                @if (isSubmitted && productForm.controls['price'].invalid) {
+                    <div class="text-red-500 text-xs mt-1">
+                        Price is required, and might be a positive number.
+                    </div>
+                }
             </div>
             <button type="submit"
                 class="w-full py-2 rounded bg-blue-500 text-white font-semibold hover:bg-blue-600 transition">
