--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -4,40 +4,46 @@
         <img src="https://go.dev/blog/go-brand/Go-Logo/SVG/Go-Logo_Blue.svg" alt="Go Logo" class="w-14 h-14 -m-3" />
     </div>
 
-    <div *ngIf="isLogged" class="flex gap-4 items-center">
-        <div class="relative inline-block text-left" tabindex="0">
-            <button type="button"
-                class="inline-flex items-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:outline-none"
-                (click)="showDropdown = !showDropdown">
-                {{ user?.username }}
-                <svg class="-mr-1 size-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                    <path fill-rule="evenodd"
-                        d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
-                        clip-rule="evenodd" />
-                </svg>
-            </button>
-            <div *ngIf="showDropdown"
-                class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black/5 focus:outline-none"
-                role="menu" aria-orientation="vertical" tabindex="-1">
-                <div class="py-1" role="none">
-                    <button (click)="navigateToProfile()" class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 cursor-pointer" role="menuitem" tabindex="-1">Profile</button>
-                    <button (click)="navigateToManageUsers()" *ngIf="isAdmin" class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 cursor-pointer" role="menuitem"
-                        tabindex="-1">Manage Users</button>
-                    <button (click)="logout()"
-                        class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 cursor-pointer"
-                        role="menuitem" tabindex="-1">Logout</button>
-                </div>
+    @if (isLogged) {
+        <div class="flex gap-4 items-center">
+            <div class="relative inline-block text-left" tabindex="0">
+                <button type="button"
+                    class="inline-flex items-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:outline-none"
+                    (click)="showDropdown = !showDropdown">
+                    {{ user?.username }}
+                    <svg class="-mr-1 size-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <path fill-rule="evenodd"
+                            d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
+                            clip-rule="evenodd" />
+                    </svg>
+                </button>
+                @if (showDropdown) {
+                    <div class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black/5 focus:outline-none"
+                        role="menu" aria-orientation="vertical" tabindex="-1">
+                        <div class="py-1" role="none">
+                            <button (click)="navigateToProfile()" class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 cursor-pointer" role="menuitem" tabindex="-1">Profile</button>
+                            @if (isAdmin) {
+                                <button (click)="navigateToManageUsers()" class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 cursor-pointer" role="menuitem"
+                                    tabindex="-1">Manage Users</button>
+                            }
+                            <button (click)="logout()"
+                                class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 cursor-pointer"
+                                role="menuitem" tabindex="-1">Logout</button>
+                        </div>
+                    </div>
+                }
             </div>
         </div>
-    </div>
-    <div *ngIf="!isLogged" class="flex gap-4">
-        <button (click)="navigateToLogin()"
-            class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition">
-            Sign In
-        </button>
-        <button (click)="navigateToRegister()"
-            class="px-4 py-2 rounded border border-blue-500 text-blue-500 hover:bg-blue-50 transition">
-            Sign Up
-        </button>
-    </div>
+    } @else {
+        <div class="flex gap-4">
+            <button (click)="navigateToLogin()"
+                class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition">
+                Sign In
+            </button>
+            <button (click)="navigateToRegister()"
+                class="px-4 py-2 rounded border border-blue-500 text-blue-500 hover:bg-blue-50 transition">
+                Sign Up
+            </button>
+        </div>
+    }
 </nav>
